Added entry for orbit game

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -77,9 +77,16 @@ and open the template in the editor.
                 </p>
             </div>
             <div class="section">
-                <h2>Orbit Game</h2>
+                <h2><a href="http://www.orbitgame.themusicofthespheres.com/">Orbit Game</a></h2>
                 <p>
-                    So this one deals with spheres.  
+                    So this one deals with spheres.  It is a physics demo, that I might turn
+                    into a game sometime.  It's fun to play with.  It very accurately models 
+                    planetary motion, except you can pick up and move the sun (you can't actually
+                    do that in the real world) and the planet bounces off the sun when they 
+                    collide (also doesn't really happen).  If you want to see the orbit the planet is on,
+                    check the "Show Path" box.  You can see that orbits are usually elliptical or hyperbolic.
+                    Try to get the planet on a non-colliding elliptical orbit (it's pretty 
+                    challenging when "Show Path" is off).
                 </p>
             </div>
                 
