added IconEffects link

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -108,7 +108,19 @@ and open the template in the editor.
                     isn't set up on its current server.
                 </p>
             </div>
-
+            <div class="section">
+                <h2><a href="http://www.themusicofthespheres.com/IconEffects/IconEffects3.apk.zip">IconEffects</a></h2>
+                <p>
+                    This one deals more with sights than sounds.  It is an Android app
+                    that can batch modify the icons for all the apps you have on 
+                    your device (whether the default icons or the icons from 
+                    a theme you already have installed). It then builds an icon theme
+                    apk for you to install (Yeah, it's an app that builds another app). 
+                    You can can download the apk with the link above.  A lot of 
+                    things are broken in KitKat, but it was working on JellyBean.
+                </p>
+                    
+            </div>
 
         </div>
     </body>
