add Fretboard Practice

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -71,11 +71,20 @@ and open the template in the editor.
                     since I've worked on this.  Right now, it seems to work only in the
                     <a href="www.mozilla.org/firefox-download">Firefox</a> browser.  There aren't
                     good tutorials yet, but a couple of very rough videos are available 
-                    <a href="http://www.psalmsing.com/">here</a>.
+                    <a href="http://www.psalmsing.com/">here</a>. Mobile friendly.
                 </p>
                 <p>
                     If you try to compose or edit a psalm tone, enter notes by clicking 
                     where you want them on the staff, and edit them by right clicking on them.
+                </p>
+            </div>
+            <div class='section'>
+                <h2><a href="http://www.fretboardpractice.themusicofthespheres.com/">Fretboard Practice</a></h2>
+                <p>
+                    Helps you learn the notes on a guitar fretboard.  Select which fretboard positions
+                    to practice and whether to quiz with ask and respond with note names, staff,
+                    or a fret chart.  There is even an option to answer by using your
+                    device's microphone and playing the note on a real guitar.  Mobile friendly.
                 </p>
             </div>
             <div class="section">
