--- a/public_html/index.html
+++ b/public_html/index.html
@@ -102,6 +102,13 @@ and open the template in the editor.
                 </p>
             </div>
             <div class="section">
+                <h2><a href="http://www.themusicofthespheres.com/vbs">Vacation Bible School Theme Generator</a></h2>
+                <p>
+                    If you're familiar with the sorts of things that are chosen as 
+                    vacation bible school themes, you might get a chuckle out of this.
+                </p>
+            </div>
+            <div class="section">
                 <h2><a href="http://www.themusicofthespheres.com/FOL">Propositional Logic</a></h2>
                 <p>
                     Did you take a logic class in college?  I've taught logic and used it
