Fix htaccess for MoSIndex.  Single php error page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>The Music of the Spheres</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type="text/css" href="mosIndex.css">
+        <link rel='stylesheet' type="text/css" href="/MOSindex/mosIndex.css">
     </head>
     <body>
         <h1>Welcome to themusicofthespheres.com</h1>
@@ -99,13 +99,6 @@ and open the template in the editor.
                     Try to get the planet on a non-colliding elliptical orbit (it's pretty 
                     challenging when "Show Path" is off; it's super easy if you show the 
                     trajectory and use the "pause" feature).  Some fun(?) physics stats are listed.
-                </p>
-            </div>
-            <div class="section">
-                <h2><a href="http://www.themusicofthespheres.com/vbs">Vacation Bible School Theme Generator</a></h2>
-                <p>
-                    If you're familiar with the sorts of things that are chosen as 
-                    vacation bible school themes, you might get a chuckle out of this.
                 </p>
             </div>
             <div class="section">
