Change links in MoSIndex

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,12 +28,12 @@ and open the template in the editor.
                 <p>These two are integrated into one, but if you are only interested in one or 
                     the other, there's no need to dive into both.  This really works best in Google's <a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome browser</a>, though most of it 
                     works in <a href="www.mozilla.org/firefox-download">Firefox</a> too.</p>
-                <h3><a href='http://sheetmusic.themusicofthespheres.com/'>MusicSheet</a></h3>
+                <h3><a href='/MusicSheet'>MusicSheet</a></h3>
                 <div class='indent'>
                     <p>This app lets you input multi-part music and then play it back,
                         adjusting the volume of each part independently.  It's easy to 
                         get the hang of. To get started, just navigate to the 
-                        <a href='http://sheetmusic.themusicofthespheres.com/'>app</a>, and 
+                        <a href='/MusicSheet'>app</a>, and 
                         select "MusicSheet Tutorial" from the menu you'll find in 
                         the gear icon at the top left.</p>
                     <p>If you sing in a choir, this is great for 
@@ -43,7 +43,7 @@ and open the template in the editor.
                         then export what you've done and email it your members 
                         to import for themselves (copyright permitting, of course).
                 </div>
-                <h3><a href='http://webaudiogui.themusicofthespheres.com/'>WebAudioGUI</a></h3>
+                <h3><a href='/WebAudioGUI'>WebAudioGUI</a></h3>
                 <div class='indent'>
                     <p>As the name suggests, the intention here is to make a graphical
                         user interface for the Web Audio API.  You get flowchart-style graphical audio
