Change links in MoSIndex

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,7 @@ and open the template in the editor.
                         nodes. You can drag and drop connections among them and adjust their 
                         parameters in a flexible way.  
                         The tutorial here is stored as a series of instruments.
-                        Navigate to the <a href='http://webaudiogui.themusicofthespheres.com/'>app</a>
+                        Navigate to the <a href='/WebAudioGUI'>app</a>
                         (like I said, it's integrated with MusicSheet,
                         so it's all on one page), and then from the gear menu click 
                         "Open Instrument" and start with the instrument called "Tutorial 1."
@@ -63,7 +63,7 @@ and open the template in the editor.
                 </div>
             </div>
             <div class='section'>
-                <h2><a href="http://www.psalmsing.com/sing.php">PsalmSing</a></h2>
+                <h2><a href="/psalmsing">PsalmSing</a></h2>
                 <p>
                     The idea here is to facilitate the chanting of psalms with a variety 
                     of different melodies or "tones."  You can compose and save your 
@@ -71,7 +71,7 @@ and open the template in the editor.
                     since I've worked on this.  Right now, it seems to work only in the
                     <a href="www.mozilla.org/firefox-download">Firefox</a> browser.  There aren't
                     good tutorials yet, but a couple of very rough videos are available 
-                    <a href="http://www.psalmsing.com/">here</a>. Mobile friendly.
+                    <a href="https://www.youtube.com/channel/UCVeP6AFfkILXytoCgWojO2A">here</a>. Mobile friendly.
                 </p>
                 <p>
                     If you try to compose or edit a psalm tone, enter notes by clicking 
@@ -79,7 +79,7 @@ and open the template in the editor.
                 </p>
             </div>
             <div class='section'>
-                <h2><a href="http://www.fretboardpractice.themusicofthespheres.com/">Fretboard Practice</a></h2>
+                <h2><a href="/fretboardpractice">Fretboard Practice</a></h2>
                 <p>
                     Helps you learn the notes on a guitar fretboard.  Select which fretboard positions
                     to practice and whether to quiz with ask and respond with note names, staff,
@@ -88,7 +88,7 @@ and open the template in the editor.
                 </p>
             </div>
             <div class="section">
-                <h2><a href="http://www.orbitgame.themusicofthespheres.com/">Orbit Game</a></h2>
+                <h2><a href="/orbitgame">Orbit Game</a></h2>
                 <p>
                     So this one deals with spheres.  It is a physics demo that I might turn
                     into a game sometime.  It's fun to play with.  It very accurately models 
@@ -102,7 +102,7 @@ and open the template in the editor.
                 </p>
             </div>
             <div class="section">
-                <h2><a href="http://www.themusicofthespheres.com/FOL">Propositional Logic</a></h2>
+                <h2><a href="/FOL">Propositional Logic</a></h2>
                 <p>
                     Did you take a logic class in college?  I've taught logic and used it
                     in other classes I've taught as well.  This is a program I made for 
@@ -117,19 +117,7 @@ and open the template in the editor.
                     isn't set up on its current server.
                 </p>
             </div>
-            <div class="section">
-                <h2><a href="http://www.themusicofthespheres.com/IconEffects/IconEffects3.apk.zip">IconEffects</a></h2>
-                <p>
-                    This one deals more with sights than sounds.  It is an Android app
-                    that can batch modify the icons for all the apps you have on 
-                    your device (whether the default icons or the icons from 
-                    a theme you already have installed). It then builds an icon theme
-                    apk for you to install (Yeah, it's an app that builds another app). 
-                    You can can download the apk with the link above.  A lot of 
-                    things are broken in KitKat, but it was working on JellyBean.
-                </p>
-                    
-            </div>
+            
 
         </div>
     </body>
