--- a/public_html/index.html
+++ b/public_html/index.html
@@ -70,8 +70,8 @@ and open the template in the editor.
                     own tones here or use a variety of tones provided.  It's been a while
                     since I've worked on this.  Right now, it seems to work only in the
                     <a href="www.mozilla.org/firefox-download">Firefox</a> browser.  There aren't
-                    good tutorials yet, but a couple of very rough videos are available 
-                    <a href="https://www.youtube.com/channel/UCVeP6AFfkILXytoCgWojO2A">here</a>. Mobile friendly.
+                    good tutorials yet, but a bit is offered
+                    <a href="/psalmsing/app/HelpPages/GettingStarted.php">here</a>. Mobile friendly.
                 </p>
                 <p>
                     If you try to compose or edit a psalm tone, enter notes by clicking 
