.section to .mos_section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,8 +14,8 @@ and open the template in the editor.
     <body>
         <h1>Welcome to themusicofthespheres.com</h1>
                 
-        <div class="content">
-            <div class='section'>
+        <div class="mos_content">
+            <div class='mos_section'>
                 <p>I have a few web apps relating to music (and one relating to, um,
                     well, spheres), and I've got them parked here. Please enjoy.  If
                     you find something that you like or you have questions, I'd love to 
@@ -23,7 +23,7 @@ and open the template in the editor.
                 </p>
                 
             </div>
-            <div class='section'>
+            <div class='mos_section'>
                 <h2>MusicSheet and WebAudioGui</h2>
                 <p>These two are integrated into one, but if you are only interested in one or 
                     the other, there's no need to dive into both.  This really works best in Google's <a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome browser</a>, though most of it 
@@ -37,7 +37,7 @@ and open the template in the editor.
                         select "MusicSheet Tutorial" from the menu you'll find in 
                         the gear icon at the top left.</p>
                     <p>If you sing in a choir, this is great for 
-                        letting you hear just your part of a section of music, 
+                        letting you hear just your part of a mos_section of music, 
                         or just your part with the other parts quiter. If you 
                         are a choir director, you can enter a piece of music and 
                         then export what you've done and email it your members 
@@ -62,7 +62,7 @@ and open the template in the editor.
                     </p>
                 </div>
             </div>
-            <div class='section'>
+            <div class='mos_section'>
                 <h2><a href="/psalmsing">PsalmSing</a></h2>
                 <p>
                     The idea here is to facilitate the chanting of psalms with a variety 
@@ -78,7 +78,7 @@ and open the template in the editor.
                     where you want them on the staff, and edit them by right clicking on them.
                 </p>
             </div>
-            <div class='section'>
+            <div class='mos_section'>
                 <h2><a href="/fretboardpractice">Fretboard Practice</a></h2>
                 <p>
                     Helps you learn the notes on a guitar fretboard.  Select which fretboard positions
@@ -87,7 +87,7 @@ and open the template in the editor.
                     device's microphone and playing the note on a real guitar.  Mobile friendly.
                 </p>
             </div>
-            <div class="section">
+            <div class="mos_section">
                 <h2><a href="/orbitgame">Orbit Game</a></h2>
                 <p>
                     So this one deals with spheres.  It is a physics demo that I might turn
@@ -101,7 +101,7 @@ and open the template in the editor.
                     trajectory and use the "pause" feature).  Some fun(?) physics stats are listed.
                 </p>
             </div>
-            <div class="section">
+            <div class="mos_section">
                 <h2><a href="/FOL">Propositional Logic</a></h2>
                 <p>
                     Did you take a logic class in college?  I've taught logic and used it
