changing paths to work on 1and1

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
                         select "MusicSheet Tutorial" from the menu you'll find in 
                         the gear icon at the top left.</p>
                     <p>If you sing in a choir, this is great for 
-                        letting you hear just your part of a mos_section of music, 
+                        letting you hear just your part of a section of music, 
                         or just your part with the other parts quiter. If you 
                         are a choir director, you can enter a piece of music and 
                         then export what you've done and email it your members 
