--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,8 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' type="text/css" href="/MOSindex/mosIndex.css">
+        <link rel="icon" type="image/png" href="/favicon.png" />
+
     </head>
     <body>
         <h1>Welcome to themusicofthespheres.com</h1>
