--- a/index.html
+++ b/index.html
@@ -63,19 +63,17 @@ Copyright B. Clint Hall 2016 all rights reserved
                 </div>
             </div>
             <div class='mos_section'>
-                <h2><a href="/psalmsing">PsalmSing</a></h2>
+                <h2>PsalmSing</h2>
                 <p>
                     The idea here is to facilitate the chanting of psalms with a variety 
                     of different melodies or "tones."  You can compose and save your 
                     own tones here or use a variety of tones provided.  It's been a while
-                    since I've worked on this.  Right now, it seems to work only in the
-                    <a href="www.mozilla.org/firefox-download">Firefox</a> browser.  There aren't
-                    good tutorials yet, but a bit is offered
-                    <a href="/psalmsing/app/HelpPages/GettingStarted.php">here</a>. Mobile friendly.
-                </p>
-                <p>
-                    If you try to compose or edit a psalm tone, enter notes by clicking 
-                    where you want them on the staff, and edit them by right clicking on them.
+                    since I've worked on this, and it unfortunately isn't working right now,
+                    but there are still some videos about how it works on YouTube:
+                    <ul>
+                    <li><a href="https://youtu.be/6Rp052E0UPc">Getting Started</a></li>
+                    <li><a href="https://youtu.be/0TR-Md6GZdg">St. Meinrad Psalm Tones</a></li>
+                    </ul>
                 </p>
             </div>
             <div class='mos_section'>
