--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ Copyright B. Clint Hall 2016 all rights reserved
                 <p>These two are integrated into one, but if you are only interested in one or 
                     the other, there's no need to dive into both.  This really works best in Google's <a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome browser</a>, though most of it 
                     works in <a href="www.mozilla.org/firefox-download">Firefox</a> too.</p>
-                <h3><a href='/MusicSheet'>MusicSheet</a></h3>
+                <h3><a href='./MusicSheet/'>MusicSheet</a></h3>
                 <div class='indent'>
                     <p>This app lets you input multi-part music and then play it back,
                         adjusting the volume of each part independently.  It's easy to 
                         get the hang of. To get started, just navigate to the 
-                        <a href='/MusicSheet'>app</a>, and 
+                        <a href='./MusicSheet/'>app</a>, and
                         select "MusicSheet Tutorial" from the menu you'll find in 
                         the gear icon at the top right.</p>
                     <p>If you sing in a choir, this is great for 
@@ -43,14 +43,14 @@ Copyright B. Clint Hall 2016 all rights reserved
                         then export what you've done and email it your members 
                         to import for themselves (copyright permitting, of course).
                 </div>
-                <h3><a href='/WebAudioGUI'>WebAudioGUI</a></h3>
+                <h3><a /href='./MusicSheet/'>WebAudioGUI</a></h3>
                 <div class='indent'>
                     <p>As the name suggests, the intention here is to make a graphical
                         user interface for the <a href="https://www.w3.org/TR/webaudio/">Web Audio API</a>.  You get flowchart-style graphical audio
                         nodes. You can drag and drop connections among them and adjust their 
                         parameters in a flexible way.  
                         The tutorial here is stored as a series of instruments.
-                        Navigate to the <a href='/WebAudioGUI'>app</a>
+                        Navigate to the <a href='./MusicSheet/'>app</a>
                         (like I said, it's integrated with MusicSheet,
                         so it's all on one page), and then from the gear menu click 
                         "Open Instrument" and start with the instrument called "Tutorial 1."
@@ -77,7 +77,7 @@ Copyright B. Clint Hall 2016 all rights reserved
                 </p>
             </div>
             <div class='mos_section'>
-                <h2><a href="/fretboardpractice">Fretboard Practice</a></h2>
+                <h2><a href="./FretboardPractice/">Fretboard Practice</a></h2>
                 <p>
                     Helps you learn the notes on a guitar fretboard.  Select which fretboard positions
                     to practice. There are lots of options for how to quiz yourself.  </p>
@@ -98,7 +98,7 @@ Copyright B. Clint Hall 2016 all rights reserved
                 <p>Mobile friendly.</p>
             </div>
             <div class="mos_section">
-                <h2><a href="/orbitgame">Orbit Game</a></h2>
+                <h2><a href="./OrbitGame/">Orbit Game</a></h2>
                 <p>
                     So this one deals with spheres.  It is a physics demo that I might turn
                     into a game sometime.  It's fun to play with.  It very accurately models 
@@ -112,7 +112,7 @@ Copyright B. Clint Hall 2016 all rights reserved
                 </p>
             </div>
             <div class="mos_section">
-                <h2><a href="/FOL">Propositional Logic</a></h2>
+                <h2><a href="./FirstOrderLogic/">Propositional Logic</a></h2>
                 <p>
                     Did you take a logic class in college?  I've taught logic and used it
                     in other classes I've taught as well.  This is a program I made for 
